# vscode-cpp-cuda-cmake-template

./: .clang-format  .clang-tidy  .clang-tidy-lower  .clangd  .gitignore  CMakeLists.txt  README.md  vcpkg.json
cuda/: CMakeLists.txt
cuda/cuda_main/: CMakeLists.txt
cuda/cuda_main/src/: cuda_main.cpp
cuda/my_cuda_lib/: CMakeLists.txt
cuda/my_cuda_lib/include/: my_cuda_lib.h
cuda/my_cuda_lib/src/: my_cuda_lib.cu
main/: CMakeLists.txt
main/src/: main.cpp
my_header_lib/: CMakeLists.txt
my_header_lib/include/: my_header_lib.h
my_shared_lib/: CMakeLists.txt
my_shared_lib/include/: my_shared_lib.h  my_shared_lib.hpp
my_shared_lib/src/: my_shared_lib.cpp
my_static_lib/: CMakeLists.txt
my_static_lib/include/: my_static_lib.h  my_static_lib.hpp
my_static_lib/src/: my_static_lib.cpp
test/: CMakeLists.txt
test/src/: my_header_lib_test.cpp  my_shared_lib_test.cpp  my_static_lib_test.cpp
